--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   },
   "dependencies": {
     "@fancyapps/ui": "^5.0.36",
+    "particles.js": "^2.0.0",
     "sass": "^1.89.2",
-    "three": "^0.177.0",
-    "three-tween": "^1.0.0",
     "vitepress": "^1.6.3",
     "vitepress-plugin-group-icons": "^1.6.0"
+  },
+  "devDependencies": {
+    "busuanzi.pure.js": "^1.0.3"
   }
 }
