--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   },
   "dependencies": {
     "@fancyapps/ui": "^5.0.36",
+    "aplayer": "^1.10.1",
+    "axios": "^1.10.0",
     "particles.js": "^2.0.0",
     "sass": "^1.89.2",
     "vitepress": "^1.6.3",
