--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "scripts": {
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
@@ -9,6 +10,7 @@
     "aplayer": "^1.10.1",
     "axios": "^1.10.0",
     "gsap": "^3.13.0",
+    "motion-v": "^1.3.0",
     "particles.js": "^2.0.0",
     "sass": "^1.89.2",
     "vitepress": "^1.6.3",
