--- a/crawlerConfig.json
+++ b/crawlerConfig.json
@@ -1,6 +1,6 @@
 {
     "index_name": "xinc",
-    "start_urls": ["https://cblog.saozijun.top/"],
+    "start_urls": ["https://blog.saozijun.top/"],
     "rateLimit": 8,
     "maxDepth": 10,
     "selectors": {
