--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.10.0",
     "gsap": "^3.13.0",
     "motion-v": "^1.3.0",
+    "nprogress": "^0.2.0",
     "particles.js": "^2.0.0",
     "sass": "^1.89.2",
     "vitepress": "^1.6.3",
